--- a/projectLaundry/Views/Shared/_Layout.cshtml
+++ b/projectLaundry/Views/Shared/_Layout.cshtml
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - My Laundry</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <style>
         .navbar-inverse {
-            background: #A4B48C;
-            border-color: #A4B48C;
+            background: #8caa60;
+            border-color: #8caa60;
         }
             .navbar-inverse .navbar-nav li a {
                 color: #1b1e1a;
@@ -17,6 +17,10 @@
             .navbar-inverse .navbar-brand {
                 color: #1b1e1a;
             }
+
+        body {
+            background-image: url('https://cdn.hovia.com/app/uploads/soft-sage-abstract-paint-strokes-wallpaper-mural-Plain.jpg');
+        }
 
     </style>
 </head>
